fix a spacing bug with movie cards

--- a/src/Movies/Movies.css
+++ b/src/Movies/Movies.css
@@ -2,14 +2,16 @@
   height: calc(100vh - 5rem);
   top: 5rem;
   bottom: 0;
+  padding: 0 2rem;
+  overflow: scroll;
+
 }
 
 .movies-content {
-  overflow: scroll;
-  height: 100%;
   width: 100%;
+  height: 100%;
   display: flex;
   flex-flow: row wrap;
   justify-content: center;
-  gap: 2rem;
+  gap: 0 2rem;
 }
